Bug fix: scrolling outside intended area on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   width: 100dvw;
   height: 100dvh;
   margin: 0;
+  overflow: none;
 }
 
 .logo {
